docker/aks/cd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd
  labels:
    app: cd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cd
  template:
    metadata:
      labels:
        app: cd
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
      - name: cd
        image: sitecoreakshack.azurecr.io/habitathome-xp-cd:9.2.0-windowsservercore-ltsc2019
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 1
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cd
  labels:
    app: cd
spec:
  selector:
    app: cd
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
