docker/aks/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
  labels:
    app: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  template:
    metadata:
      labels:
        app: solr
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: solr
        image: sitecoreakshack.azurecr.io/sitecore-xp-sxa-1.9.0-solr:9.2.0-linux
        imagePullPolicy: Always
        ports:
          - containerPort: 8983
        resources:
          limits:
            cpu: 2
            memory: 1Gi
          requests:
            cpu: 1
            memory: 500Mi
        volumeMounts:
          - mountPath: "/data"
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: solr-data
---
apiVersion: v1
kind: Service
metadata:
  name: solr
  labels:
    app: solr
spec:
  selector:
    app: solr
  type: ClusterIP
  ports:
    - name: tcp
      port: 8983
      targetPort: 8983
