docker/aks/sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
  labels:
    app: sql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: sql
        image: sitecoreakshack.azurecr.io/habitathome-xp-sql:9.2.0-linux
        imagePullPolicy: Always
        ports:
          - containerPort: 1433
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 2
            memory: 2Gi
        volumeMounts:
          - mountPath: "/data"
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sql-data4
---
apiVersion: v1
kind: Service
metadata:
  name: sql
  labels:
    app: sql
spec:
  selector:
    app: sql
  type: ClusterIP
  ports:
    - name: tcp
      port: 1433
      targetPort: 1433
