docker/aks/xconnect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xconnect
  labels:
    app: xconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xconnect
  template:
    metadata:
      labels:
        app: xconnect
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
      - name: xconnect
        image: sitecoreakshack.azurecr.io/habitathome-xp-xconnect:9.2.0-windowsservercore-ltsc2019
        imagePullPolicy: Always
        ports:
          - containerPort: 443
          - containerPort: 80
        resources:
          limits:
            cpu: 2
            memory: 1500Mi
          requests:
            cpu: 1
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: xconnect
  labels:
    app: xconnect
spec:
  selector:
    app: xconnect
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
    - name: http
      port: 80
      targetPort: 80
